Tue Jan  4 07:48:20 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Added code to support the use of nobase_include_HEADERS and
          nobase_pkginclude_HEADERS in the case where 'includedir' isn't
          set.

Mon Jan  3 13:12:23 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:
        * templates/automake.mpd:
        * templates/automakedll.mpt:

          Added support for an 'includedir' template variable that can be
          used to override the default includedir setting determined by
          AutomakeWorkspaceCreator.  In order for header files for a
          particular project to be "installed", the 'install_headers'
          template variable needs to be set to 1.  Thanks to Stephen Torri
          <storri@cse.wustl.edu> for providing this functionality.

Mon Jan  3 11:11:35 2005  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:
        * modules/MPC.pm:
        * modules/MWC.pm:

          Removed support for Visual Age 4.  It was incomplete, out-of-date
          and most likely didn't work at all.

        * modules/VA4ProjectCreator.pm:
        * modules/VA4WorkspaceCreator.pm:
        * templates/va4icc.mpd:
        * templates/va4iccdll.mpt:
        * templates/va4iccdllexe.mpt:
        * templates/va4icclib.mpt:
        * templates/va4icclibexe.mpt:

          Removed these files.

Mon Jan  3 09:18:13 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:
        * templates/em3vcp.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          Added the ability to generate projects that only contain resource
          files.

Wed Dec 22 12:47:02 2004  Chad Elliott  <elliott_c@ociweb.com>

        * MPC version 3.2.0 released.

Local Variables:
add-log-time-format: current-time-string
End: