@@ -1,3 +1,10 @@
+Tue Jan  4 09:52:13 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/WinVersionTranslator.pm:
+
+          Truncate minor version numbers to 65535 or under as Visual C++ 6.0
+          can't handle anything larger.
+
 Tue Jan  4 07:48:20 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/AutomakeWorkspaceCreator.pm:
